--- a/estilos.css
+++ b/estilos.css
@@ -1,588 +1,61 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap'); */
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: didot;
-}
-html {
-    scroll-behavior: smooth;
-}
-@font-face {
-    font-family: didot;
-    src: url(didot-italic.ttf);
-}
-body {
-    /* height: 100vh; */
-    display: grid;
-    align-items: center;
-    font-family: didot;
-    background: black;
-    margin: 0;
-}
-.contenedor {
-    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url(imagenes/city.jpg);
-    background-position: center center;
-    background-size: cover;
-    min-height: 100vh;
-    position: relative;
-    /* top: 0;
-    left: 0; */
-    /* transform: translate(-50%, -50%); */
-    text-align: center;
-    /* z-index: -1; */
-    width: 100%;
-    padding: 0px 30px;
-    background-color: black;
+
+/*===================MENU==========================*/
+
+#menu a, button{
+    font-size: 18px !important;
+    font-weight: 600;
+   
 }
 
-/* .contenedor div {
-    font-size: 40px;
-    font-weight: 700;
-    background-color: transparent;
-} */
- /* .hero {
-    height: 93vh;
-    background-image: linear-gradient(rgba(16, 16, 16, .8), rgba(16, 16, 16, .9)) , url(imagenes/city.jpg);
-    background-size: cover;
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    position: relative;
-  }
-  .hero .info-content {
-    grid-column: 2 / 4;
-    grid-row: 2 / 3;
-    color: #fff;
-    z-index: 1;
-    padding: 50px;
-  } */
-  .contenedor .info-content h3 {
-    font-family: didot;
-    font-size: 1.8em;
-    color: white;
-  }
-  .contenedor .info-content h1 {
-    font-weight: 900;
-    font-size: 5em;
-    color: #EDCB54;
-  }
-  .contenedor .info-content p {
-    font-family: didot;
-    font-size: 1.5em;
-  }
-  .contenedor .info-content .btn {
-    font-size: 1em;
-    color:#fff;
-    background: none;
-    padding: 10px 20px;
-    border-radius: 30px;
-    border:1px solid white;
-    margin-top: 10px;
-  }
-  .contenedor .info-content .btn:hover {
-    background-color: white;
-    color: black;
-  }
-/* inicio-navbar */
-
-nav {
-    display: flex;
-    height: 80px;
-    width: 100%;
-    background: transparent;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 50px 0 100px;
-    flex-wrap: wrap;
-}
-nav .logo {
-    padding: 0px;
-    margin: 0px;
-}
-nav ul {
-    display: flex;
-    flex-wrap: wrap;
-    list-style: none;
-}
-nav ul li {
-    margin: 0 5px;
-}
-nav ul li a {
-    color: #f2f2f2;
-    text-decoration: none;
-    font-size: 18px;
-    font-weight: 500;
-    padding: 8px 15px;
-    border-radius: 5px;
-    letter-spacing: 1px;
-    transition: all 0.3s ease;
-}
-nav ul li a.active,nav ul li a:hover {
-    color: #111;
-    background: white;
-}
-nav .menu-btn i {
-    color: white;
-    font-size: 22px;
-    cursor: pointer;
-    display: none;
-}
-#click{
-    display: none;
-}
-@media (max-width: 1000px){
-    nav{
-        padding: 0 40px 0 50px;
-    }
-}
-
-@media (max-width: 940px){
-    nav .menu-btn i{
-        display: block;
-    }
-
-#click:checked ~ .menu-btn i::before{
-    content: "\f00d";
-}
-nav ul{
-    position: fixed;
-    top: 80px;
-    left: -100%;
-    background: black;
-    height: 100vh;
-    width: 100%;
-    text-align: center;
-    display: block;
-    transition: all 0.3s ease;
-}
-#click:checked ~ ul{
-    left: 0;
-    z-index: 2;
-}
-nav ul li{
-    width: 100%;
-    margin: 40px 0;
-}
-nav ul li a{
-    width: 100%;
-    margin-left: -100%;
-    display: block;
-    font-size: 20px;
-    transition: 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-}
-#click:checked ~ ul li a{
-    margin-left: 0px;
-    z-index: 2;
-}
-nav ul li a.active,
-nav ul li a:hover{
-    background: none;
-    color: cyan;
-    }
-}
-/* fin-navbar */
-/*texto-galeria*/
-h2 {
-    text-align: center;
-    color: white;
-    font-family: didot;
-    font-size: 72px;
-    font-weight: 400;
-    line-height: 90px;
-    border-bottom: 3px solid white;
-}
-/*fin-texto-galeria/*
-
-/*inicio de la pag.inicio*/
-/* .row {
-    display: flex;
-    height: 88%;
-    align-items: center;
-}
-.col {
-    flex-basis: 50%;
-}
-.colv2 {
-    display: flex;
-    flex-wrap: nowrap;
-    flex-basis: 50%;
+#menu a{
+    color:white;
     
-} */
-/*TEXTOyBOTON-inicio*/
-h1 {
-    font-family: didot;
-    color: white;
-    font-size: 72px;
-    font-weight: 400;
-    line-height: 90px;
 }
-p {
-    font-family: didot;
-    color: white;
-    font-size: 11px;
-    line-height: 15px;
+#menu a:hover {
+    color: cyan;
 }
-button {
-    font-size: 20px;
-    color:#fff;
-    background: none;
-    padding: 10px 20px;
-    border-radius: 30px;
-    border:1px solid white;
-    margin-top: 10px;
-    cursor: pointer;
-}
-button:hover {
-    background-color: white;
-    color: black;
-}
-/* TEXTOyBOTON */
-/*img-inicio*/
-
-/* fin-img-inicio */
-/*fin de la pag.inicio/*
-/* inicio de contacto */
-.contact-wrap {
-	width: 80%;
-	height: auto;
-    margin: auto;
-	display: flex;
-	flex-wrap: wrap;
-}
-
-.contact-in {
-	padding: 40px 30px;
-}
-
-.contact-in:nth-child(1) {
-	flex: 35%;
-	background: url(imagenes/1.jpg);
-    filter: grayscale(100%);
-	color: #fff;
-}
-
-.contact-in:nth-child(2) {
-	flex: 45%;
-	background: black;
-}
-
-.contact-in:nth-child(3) {
-	flex: 25%;
-	padding: 0;
-}
-
-.contact-in h1 {
-	font-size: 24px;
-	color: #fff;
-	text-transform: uppercase;
-	font-weight: 500;
-	margin-bottom: 20px;
-}
-
-.contact-in h3 {
-	font-size: 20px;
-	font-weight: 400;
-	margin-bottom: 15px;
-}
-
-.contact-in h3 i {
-	font-size: 16px;
-	width: 40px;
-	height: 40px;
-	margin-right: 10px;
-	background: #f5f5f5;
-	color: #000;
-	border-radius: 50px;
-	line-height: 40px;
-	text-align: center;
-}
-
-.contact-in p {
-	font-size: 14px;
-	font-weight: 300;
-	margin-bottom: 20px;
-}
-
-.contact-in ul {
-	padding: 0;
-	margin: 0;
-}
-
-.contact-in ul li {
-	list-style: none;
-	display: inline-block;
-	margin-right: 5px;
-	margin-top: 5px;
-}
-
-.contact-in ul li a {
-	display: block;
-	width: 30px;
-	height: 30px;
-	text-align: center;
-	background: #fff;
-	border-radius: 50px;
-}
-
-.contact-in ul li a i {
-	font-size: 14px;
-	line-height: 30px;
-	color: #000;
-}
-
-.contact-in form {
-	width: 100%;
-	height: auto;
-}
-
-.contact-in-input {
-	width: 100%;
-	height: 40px;
-	margin-bottom: 20px;
-	border: 1px solid #fff;
-	outline: none;
-	padding-left: 5px;
-	background: transparent;
-	color: #fff;
-	font-size: 12px;
-	font-weight: 300;
-	font-family: 'Poppins', sans-serif;
-}
-
-.contact-in-input::placeholder {
-	color: #fff;
-}
-
-.contact-in-textarea {
-	width: 100%;
-	height: 140px;
-	margin-bottom: 20px;
-	border: 1px solid #fff;
-	outline: none;
-	padding-top: 5px;
-	padding-left: 5px;
-	background: transparent;
-	color: #fff;
-	font-size: 12px;
-	font-weight: 300;
-	font-family: 'Poppins', sans-serif;
-}
-
-.contact-in-textarea::placeholder {
-	color: #fff;
-}
-
-.contact-in-btn {
-	width: 100%;
-	height: 40px;
-	border: 1px solid #fff;
-	outline: none;
-	background: transparent;
-	color: #fff;
-	font-size: 12px;
-	font-weight: 300;
-	font-family: 'Poppins', sans-serif;
-	cursor: pointer;
-}
-
-.contact-in iframe {
-	width: 100%;
-	height: 100%;
-    filter: grayscale(100%) invert(100%);
-}
-
-@media only screen and (max-width:480px) {
-	.contact-in:nth-child(1) {
-		flex: 50%;
-	}
-
-	.contact-in:nth-child(2) {
-		flex: 50%;
-	}
-
-	.contact-in:nth-child(3) {
-		flex: 100%;
-	}
-
-}
-
-@media only screen and (max-width:360px) {
-	.contact-in:nth-child(1) {
-		flex: 50%;
-	}
-
-	.contact-in:nth-child(2) {
-		flex: 50%;
-	}
-
-	.contact-in:nth-child(3) {
-		flex: 100%;
-	}
-
-}
-
-/* fin de contacto */
-/* beamodel */
-form {
-	padding:16px;
-	margin:auto;
+#menu {
     background-color: black;
 }
-tbody {
-    color: white;
-}
-legend {
-    color: white;
-}
-/* fin-beamodel */
+/*===================SLIDER DE IMAGENES==========================*/
 
-/*galeria*/
-.gallery-container {
-    display:grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 100px 300px;
-    padding: 20px;
-    grid-gap: 10px;
-    grid-auto-flow: dense;
-}
-.gallery-item{
-    width:100%;
-    height:100%;
-    position:relative;
+.carousel-inner {
+   max-height:39rem !important;
 }
 
-.gallery-item .image{
-    width:100%;
-    height:100%;
-    overflow:hidden;
+/*===================SECCION IMAGEN==========================*/
+
+#galeria .col-lg-4 {
+    margin: 0 !important;
+    padding: 25px;
 }
-.gallery-item .image img{
-    width:100%;
-    height:100%;
-    object-fit: cover;
-    object-position:32% 32%;
-    cursor:pointer;
+#galeria img {
+    width: 100%;
+    height: 500px;
+    cursor: pointer;
     transition:.5s ease-in-out;
 }
-.gallery-item:hover .image img{
-    transform:scale(1.5);
-}
-/* galeria-grid */
-.gallery-item:nth-child(1) {
-    grid-column-start: span 1;
-    grid-row-start: span 2;
-}
-.gallery-item:nth-child(2) {
-    grid-column-start: span 1;
-    grid-row-start: span 2;
-}
-.gallery-item:nth-child(3) {
-    grid-column-start: span 1;
-    grid-row-start: span 2;
-}
-.gallery-item:nth-child(4) {
-    grid-column-start: span 1;
-    grid-row-start: span 2;
-}
-.gallery-item:nth-child(5) {
-    grid-column-start: span 1;
-    grid-row-start: span 2;
-}
-.gallery-item:nth-child(6) {
-    grid-column-start: span 1;
-    grid-row-start: span 2;
-}
-.gallery-item:nth-child(7) {
-    grid-column-start: span 1;
-    grid-row-start: span 2;
-}
-.gallery-item:nth-child(8) {
-    grid-column-start: span 1;
-    grid-row-start: span 2;
-}
-.gallery-item:nth-child(9) {
-    grid-column-start: span 1;
-    grid-row-start: span 2;
-}
-.gallery-item:nth-child(10) {
-    grid-column-start: span 1;
-    grid-row-start: span 2;
-}
-.gallery-item:nth-child(11) {
-    grid-column-start: span 1;
-    grid-row-start: span 2;
-}
-.gallery-item:nth-child(12) {
-    grid-column-start: span 1;
-    grid-row-start: span 2;
-}
-.gallery-item:nth-child(13) {
-    grid-column-start: span 1;
-    grid-row-start: span 2;
-}
-.gallery-item:nth-child(14) {
-    grid-column-start: span 1;
-    grid-row-start: span 2;
-}
-.gallery-item:nth-child(15) {
-    grid-column-start: span 1;
-    grid-row-start: span 2;
-}
-/* fin-galeria-grid */
-/*fin-galeria/*
-/*mediasQ*/
-@media (max-width:499px) {
-    .gallery-container{
-        grid-template-columns: repeat(1, 1fr);
-    } 
-}
-@media (min-width:500px) {
-    .gallery-container{
-        grid-template-columns: repeat(2, 1fr);
-    } 
-}
-@media (min-width:600px) {
-    .gallery-container{
-        grid-template-columns: repeat(2, 1fr);
-    } 
-}
-@media (min-width:700px) {
-    .gallery-container{
-        grid-template-columns: repeat(2, 1fr);
-    } 
+#galeria img:hover {
+   transform:scale(1.1);
 }
 
-@media (min-width:800px) {
-    .gallery-container {
-        grid-template-columns: repeat(3, 1fr);
-    }
-}
-@media (min-width:1024px) {
-    .gallery-container {
-        grid-template-columns: repeat(4, 1fr);
-    }
-}
-@keyframes move-down{
 
-    0%{
-        top:10%;
-    }
-    50%{
-        top:35%;
-    }
-    100%{
-        top:50%;
-    }
-}
+
+
+/*=========================FOOTER================================*/
+
 footer {
-    text-align: center;
-    min-height: 70px;
-    width: 100%;
-    position: fixed;
-    bottom: 0;
-    overflow: visible;
-    clear: both;
+   background: black;
+   min-height: 100px;
+   
+}
+footer p{
+   color:#f3f3f3;
+   text-align:center;
+}
+#iconos  i {
+   font-size: 26px;
+   padding: 0 8px;
+   color:#f3f3f3;
 }
