--- a/estilos.css
+++ b/estilos.css
@@ -12,9 +12,102 @@ body {
     background-size: cover;
     background-color: #464646;
     font-family: didot;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 /*===================MENU==========================*/
+.navbar-toggler {
+    width: 20px;
+    height: 20px;
+    position: relative;
+    transition: .5s ease-in-out;
+}
+
+.navbar-toggler,
+.navbar-toggler:focus,
+.navbar-toggler:active,
+.navbar-toggler-icon:focus {
+    outline: none;
+    box-shadow: none;
+    border: 0;
+}
+
+.navbar-toggler span {
+    margin: 0;
+    padding: 0;
+}
+
+.toggler-icon {
+    display: block;
+    position: absolute;
+    height: 3px;
+    width: 100%;
+    background: white;
+    border-radius: 1px;
+    opacity: 1;
+    left: 0;
+    transform: rotate(0deg);
+    transition: .25s ease-in-out;
+}
+
+.middle-bar {
+    margin-top: 0px;
+}
+
+/* cuando hacen click */
+
+.navbar-toggler .top-bar {
+    margin-top: 0px;
+    transform: rotate(135deg);
+}
+
+.navbar-toggler .middle-bar {
+    opacity: 0;
+    filter: alpha(opacity=0);
+}
+
+.navbar-toggler .bottom-bar {
+    margin-top: 0px;
+    transform: rotate(-135deg);
+}
+
+/* cuando se abre */
+
+.navbar-toggler.collapsed .top-bar {
+    margin-top: -20px;
+    transform: rotate(0deg);
+}
+
+.navbar-toggler.collapsed .middle-bar {
+    opacity: 1;
+    filter: alpha(opacity=100);
+}
+
+.navbar-toggler.collapsed .bottom-bar {
+    margin-top: 20px;
+    transform: rotate(0deg);
+}
+
+/* Color degradante */
+
+.navbar-toggler.collapsed .toggler-icon {
+    background: linear-gradient( 263deg, rgba(0,0,0) 0%, rgba(255,255,255,1) 100% );
+}
+.navbar-nav {
+    float:none;
+    margin: 0 auto;
+    display: block;
+    text-align: center;
+}
+
+.navbar-nav > li {
+    display: inline-block;
+    float:none;
+    padding: 5px;
+}
+
 
 #menu a, button{
     font-size: 18px;
@@ -31,38 +124,70 @@ body {
 }
 #menu {
     background-color: black;
-    z-index: 5;
+    z-index: 1;
 }
 /*===================SLIDER DE IMAGENES==========================*/
 
 .carousel-inner {
-   max-height:39rem;
+   max-height:35rem;
 }
 
-/*===================SECCION IMAGEN==========================*/
-
-#galeria .col-lg-4 {
-    margin: 0;
-    padding: 25px;
-}
-#galeria img {
+/*===================galeria==========================*/
+.hovereffects{
     width: 100%;
-    height: 500px;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+    text-align: center;
     cursor: pointer;
-    transition:.5s ease-in-out;
+    margin-bottom: 10px;
 }
-#galeria img:hover {
-   transform:scale(1.1);
+ 
+.hovereffects:after {
+   content: "";
+   position: absolute;
+   top: -50%;
+   left: -60%;
+   width: 20%;
+   height: 200%;
+   opacity: 0;
+   transform: rotate(30deg);
+ 
+   background: rgba(255, 255, 255, 0.13);
+   background: linear-gradient(
+     to right,
+     rgba(255, 255, 255, 0.13) 0%,
+     rgba(255, 255, 255, 0.13) 77%,
+     rgba(255, 255, 255, 0.5) 92%,
+     rgba(255, 255, 255, 0.0) 100%
+   );
 }
+ 
+ /* efecto hover */
+.hovereffects:hover:after {
+   opacity: 1;
+   left: 130%;
+   transition-property: left, top, opacity;
+   transition-duration: 0.7s, 0.7s, 0.15s;
+   transition-timing-function: ease;
+}
+
+.hovereffects:active:after {
+   opacity: 0;
+}
+
+
+
 
 /*===================fondo y formulario==========================*/
 .masthead {
-    min-height: 30vh;
+    min-height: 20vh;
     position: relative;
     color: yellow;
     text-shadow: 2px 2px 2px rgba(0, 0, 0,.2);
 }
 h1 {
+    color: yellow;
     font-size: 4rem;
     text-decoration: underline 3px;
 }
@@ -213,10 +338,9 @@ h1 {
 /*=========================FOOTER================================*/
 
 footer {
-   margin-top: 300px;
    background: black;
-   min-height: 100px;
-   
+   min-height: 50px;
+   margin-top: auto;
 }
 footer p{
    color:#f3f3f3;
@@ -231,7 +355,7 @@ footer p{
 .form-label {
     color: yellow;
 }
-/*=========================Be A Model================================*/
+/*=========================Be A Model(video)================================*/
 header {
     position: relative;
     background-color: black;
