--- a/estilos.css
+++ b/estilos.css
@@ -5,7 +5,7 @@
 
 
 body {
-    background-image: url(imagenes/city.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(imagenes/city.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -16,7 +16,6 @@ body {
     flex-direction: column;
     min-height: 100vh;
 }
-
 /*===================MENU==========================*/
 .navbar-toggler {
     width: 20px;
@@ -176,18 +175,20 @@ body {
    opacity: 0;
 }
 
-
+.container h1 {
+    color:black;
+    text-decoration: none;
+}
 
 
 /*===================fondo y formulario==========================*/
 .masthead {
-    min-height: 20vh;
+    min-height: 25vh;
     position: relative;
     color: yellow;
-    text-shadow: 2px 2px 2px rgba(0, 0, 0,.2);
 }
 h1 {
-    color: yellow;
+    color: black;
     font-size: 4rem;
     text-decoration: underline 3px;
 }
@@ -195,7 +196,6 @@ h1 {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0,.2);
 }
 @media (max-width: 768px) {
     .masthead {
@@ -320,19 +320,22 @@ h1 {
 }
 /*=========================h1-index================================*/
 
-.jumbotron h1 {
-    color: yellow;
+.jumbotron {
+    background-color: black;
     display: flex;
+    align-items: center;
     justify-content: center;
-    text-align: center;
+    padding-top: 10px;
 }
 .jumbotron p {
-    color: #f3f3f3;
+    color: white;
     display: flex;
     justify-content: center;
     text-align: center;
 }
-
+.jumbotron p a {
+    color: black;
+}
 
 
 /*=========================FOOTER================================*/
@@ -359,7 +362,7 @@ footer p{
 header {
     position: relative;
     background-color: black;
-    height: 68vh;
+    height: 40vh;
     min-height: 25rem;
     width: 100%;
     overflow: hidden;
@@ -406,4 +409,69 @@ header {
     width: 100%;
     filter: grayscale(100%) invert(100%);
     padding-top: 5px;
+}
+/*=========================about us content================================*/
+.rich p {
+    color: white;
+}
+.rich h5 {
+    color: yellow;
+}
+.lead {
+    color: white;
+}
+/*=========================index content================================*/
+.carousel-caption {
+	bottom: 220px;
+}
+.carousel-caption h2 {
+    color: yellow;
+	font-size: 45px;
+    text-transform: uppercase;
+	letter-spacing: 2px;
+    margin-bottom: 300px;
+}
+.carousel-caption h5 {
+    color: yellow;
+	font-size: 45px;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	margin-top: 25px;
+}
+.carousel-caption p {
+	width: 60%;
+	margin: auto;
+	font-size: 18px;
+	line-height: 1.9;
+}
+.carousel-caption a {
+	text-transform: uppercase;
+	text-decoration: none;
+	background: black;
+	padding: 10px 30px;
+	display: inline-block;
+	color: white;
+	margin-top: 15px;
+}
+@media only screen and (max-width: 767px) {
+	.carousel-caption {
+		bottom: 165px;
+	}
+	.carousel-caption h1 {
+		font-size: 17px;
+	}
+	.carousel-caption a {
+		padding: 10px 15px;
+		font-size: 15px;
+	}
+}
+
+.warning-color {
+    color: #f0ad4e;
+}
+.about h1 {
+    color: yellow;
+}
+.about p {
+    color: white;
 }
